[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/GFX/Interface/Fonts/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface/Theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/GFX/Interface/PNG/metalPanel_blueCorner.png" type="Texture" id=3]
[ext_resource path="res://Interface/SplashScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="SplashScreen" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer"]
margin_left = 312.0
margin_top = 150.0
margin_right = 712.0
margin_bottom = 450.0
rect_min_size = Vector2( 400, 300 )
texture = ExtResource( 3 )
patch_margin_left = 12
patch_margin_top = 40
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 56.0
margin_right = 360.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Welcome to
Heist Meisters"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 133.0
margin_right = 360.0
margin_bottom = 154.0

[node name="TutorialButton" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer"]
margin_left = 94.0
margin_right = 264.0
margin_bottom = 21.0
rect_min_size = Vector2( 170, 0 )
text = "Play Tutorial"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 158.0
margin_right = 360.0
margin_bottom = 179.0

[node name="Level1Button" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer2"]
margin_left = 94.0
margin_right = 264.0
margin_bottom = 21.0
rect_min_size = Vector2( 170, 0 )
text = "Level 1"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 183.0
margin_right = 360.0
margin_bottom = 204.0

[node name="QuitButton" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer3"]
margin_left = 94.0
margin_right = 264.0
margin_bottom = 21.0
rect_min_size = Vector2( 170, 0 )
text = "Quit"
[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer2/Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer3/QuitButton" to="." method="_on_QuitButton_pressed"]
